--- a/findrestaurant/app/src/main/AndroidManifest.xml
+++ b/findrestaurant/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
 
     <activity android:name=".restaurant_view">
     </activity>
+        <activity android:name=".recenthistory"></activity>
+        <activity android:name=".testlogin"></activity>
+        <activity android:name=".login"></activity>
 <activity android:name=".ordersummary"></activity>
         <activity android:name=".aboutrestaurant"></activity><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
      App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
